--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "main": "server.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "ts-node-dev src/server.ts"
+    "dev": "cross-env STAGE=local ts-node-dev src/server.ts",
+    "start:uat": "cross-env STAGE=uat node dist/server.js",
+    "start": "cross-env STAGE=prod node dist/server.js"
   },
   "repository": {
     "type": "git",
@@ -21,6 +23,7 @@
   "dependencies": {
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
+    "cross-env": "^10.0.0",
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
@@ -35,7 +38,6 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.0.12",
     "dotenv-cli": "^8.0.0",
-    "nodemon": "^3.1.10",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.3"
   }
